# sopel-chanlogs

./: NEWS  README.md  pyproject.toml  setup.py
sopel_chanlogs/: plugin.py
sopel_modules/chanlogs/: __init__.py
